--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
           <div>
             <h1 class="current-city" id="current-city">Paris</h1>
             <p class="current-details">
-              <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              <span id="time"> </span>,<span id="description"> </span><br />
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="current-temperature">
-            <span class="current-temperature-icon">☀️</span
-            ><span class="current-temperature-value" id="current-temperature"
+            <span class="current-temperature-icon" id="icon"></span>
+            <span class="current-temperature-value" id="current-temperature"
               >24</span
             ><span class="current-temperature-unit">°C</span>
           </div>
@@ -47,8 +48,19 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Karabelo Moroka</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a
+            href="https://github.com/kayleey-khaleesy/cool-weather.git"
+            target="_blank"
+            >Karabelo Moroka</a
+          >
+          and is
+          <a
+            href="https://github.com/kayleey-khaleesy/cool-weather"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
