--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
             on GitHub</a
           >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a
+            href="https://incomparable-mochi-01a73b.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
